--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header>
         <div class="logo">
-            <a href="Index.html"><img src="imagens/logos/Logocabecalho.png" alt="Tupã Logo"></a>
+            <a href="index.html"><img src="imagens/logos/Logocabecalho.png" alt="Tupã Logo"></a>
         </div>
     </header>
 
